--- a/index.html
+++ b/index.html
@@ -465,10 +465,10 @@
                     <h3 class="fw-bold">Andheri West, Mumbai, India</h3>
                     <hr class="w-100">
                     <p class="mb-2">Call me:</p>
-                    <h3 class="fw-bold">+91 7755961345</h3>
+                    <h3 class="fw-bold">+91 7755775557</h3>
                     <hr class="w-100">
                     <p class="mb-2">Mail me:</p>
-                    <h3 class="fw-bold">sajidmoh987@gamil.com</h3>
+                    <h3 class="fw-bold">information@gamil.com</h3>
                     <hr class="w-100">
                     <p class="mb-2">Follow me:</p>
                     <div class="d-flex pt-2">
